feat: terminado desenho de linhas e pontos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
-cmake_minimum_required(VERSION 3.29)
-project(paint_cg C)
+cmake_minimum_required(VERSION 3.10)
+project(paint-cg C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_library(paint_cg STATIC library.c)
+# Adicione os arquivos de origem
+add_executable(paint-cg main.c objetos.c)
+
+# Inclua os diretórios necessários
+include_directories("C:/MinGW/include")
+
+# Adicione os diretórios de link
+link_directories("C:/MinGW/lib")
+
+# Link com as bibliotecas OpenGL e GLUT
+target_link_libraries(paint-cg opengl32 glu32 freeglut)
