--- a/teste-paint.cbp
+++ b/teste-paint.cbp
@@ -34,6 +34,14 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="objetos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="objetos.h" />
+		<Unit filename="transformacoes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="transformacoes.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
